--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             <i class="fa-solid fa-hands-holding-child"></i>
                             <h2 class="off">Responsible Parenthood</h2>
                             <ul>
-                                <li>Pre-Marriage Counseling</li>
+                                <li>Pre-Marriage Orientation and Counseling</li>
                                 <li>Establishment of Multi-Purpose Counseling and Family Development Center</li>
                                 <li>Family Development Sessions</li>
                                 <li>Lectures:</li>
