--- a/index.html
+++ b/index.html
@@ -49,18 +49,95 @@
         </div>
     </header>
 
+<!-- Tables -->
+<div class="container my-4">
+    <table class="table table-dark table-hover p-lg-5">
+        <caption>Source:Municipal Profile 2023.PPO</caption>
+        <thead class="text-lg-center text-center display-6">
+            <tr>
+              <th colspan= "2">ESTANCIA POPULATION PROFILE</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+                <th scope="row ">Total Number of Barangays</th>
+                <td>25</td>
+              </tr>
+            <tr>
+              <th scope="row ">Total Land Area</th>
+              <td>29.17 sq.km.</td>
+            </tr>
+            <tr>
+              <th scope="row">Total Household Population</th>
+              <td>56,866</td>
+            </tr>
+            <tr>
+                <th scope="row">Male</th>
+                <td>28,635</td>
+              </tr>
+              <tr>
+                <th scope="row">Female</th>
+                <td>28,231</td>
+              </tr>
+              <tr>
+                <th scope="row">Sex Ratio</th>
+                <td>101:100</td>
+              </tr>
+              <tr>
+                <th scope="row">Median Age</th>
+                <td>28</td>
+              </tr>
+              <tr>
+                <th scope="row">Doubling Time | Year</th>
+                <td>83 years | yr 2106
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">Population Growth Rate</th>
+                <td>0.83</td>
+              </tr>
+              <tr>
+                <th scope="row">No. of Households</th>
+                <td>15,89
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">Population Density</th>
+                <td>1,950 persons/sq.km.
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">Age Dependency Ratio</th>
+                <td>42
+                </td>
+              </tr><tr>
+                <th scope="row">Child Dependency Ratio</th>
+                <td>32
+                </td>
+              </tr><tr>
+                <th scope="row">Old Dependency Ratio</th>
+                <td>10
+                </td>
+              </tr><tr>
+                <th scope="row">Doubling Time | Year</th>
+                <td>83 years | yr 2106
+                </td>
+              </tr>
+      </table>
+</div>
+
     <!-- Charts -->
-    <section class="container my-5">
+    <section class="container my-lg-4">
         <div class="row g-2">
-            <div class="col-md-5 bg-dark rounded-2 text-white p-4">
+            <div class="col-md-5 bg-dark rounded-2 text-white p-2">
                 <div class="chart-container">
-                    <h4 class="lead text-center mt-5 fs-4 mb-5">Total Population (2021-2023)</h4>
+                    <h4 class="lead text-center mt-2 fs-4 mb-5">Total Population (2021-2023)</h4>
                     <figure>
                         <canvas id="chart1"></canvas>
-                        <figcaption><small>Source: Municipal Population Profile. PPO. 2021-2023</small></figcaption>
+                        <caption><small>Source: Municipal Population Profile. PPO. 2021-2023</small></caption>
                     </figure>
                     <hr>
-                    <p class="lead text-center"><small>The population grew by 3.15% from 2021 to 2023. This growth can be attributed to various factors such as natural increase (the difference between births and deaths), immigration, and other demographic changes.</small></p>
+                    <p class="lead text-center "><small>The population grew by 3.15% from 2021 to 2023. This growth can be attributed to various factors such as natural increase (the difference between births and deaths), immigration, and other demographic changes.</small></p>
                 </div>
             </div>
             <div class="col-md-2"></div>
@@ -69,7 +146,7 @@
                     <h6 class="lead text-center mt-5 mb-5">2023 Population Pyramid</h6>
                     <figure>
                         <canvas id="chart2"></canvas>
-                        <figcaption><small>Source: Municipal Population Profile. PPO. 2023</small></figcaption>
+                        <caption><small>Source: Municipal Population Profile. PPO. 2023</small></caption>
                     </figure>
                     <hr>
                     <p class="lead text-center"><small>The population pyramid represents a growing population with an increased proportion of young people and a broad working-age base. The relatively smaller elderly population indicates that the municipality might have a lower dependency ratio but could face future challenges in providing for an aging population as life expectancy increases.</small></p>
