--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                         </ul>
                     </div>
                     <div class="col-sm">
-                        <iframe src="https://www.google.com/maps/d/embed?mid=1yVIe8Ojmu-tO3ffPDOnxqci5XJH2Jb8&ehbc=2E312F" width="540" height="380"></iframe>
+                        <iframe class="map" src="https://www.google.com/maps/d/embed?mid=1yVIe8Ojmu-tO3ffPDOnxqci5XJH2Jb8&ehbc=2E312F" width="540" height="380"></iframe>
                     </div>
                 </div>
             </div>
