--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Core Values</h4>
-                            <p class="card-text">We, the constituents of the Provincial Population Office (PPO), commit ourselves to the following core values and endeavor to LIVE IT:</p>
+                            <p class="card-text">We, the constituents of the Provincial Population Office (PPO), commit ourselves to the following core values and endeavor to  <span class="h4 fw-bold">LIVE IT</span>:</p>
                             <ul class="list-unstyled">
                                 <li><strong>Love of Service:</strong> Love of fellowmen expressed through service beyond self is the overarching principle that guides all other actions and endeavors.</li>
                                 <li><strong>Innovation:</strong> We believe that the creation of new ideas and initiatives in the context of our cultural heritage is the noblest response to the challenge of change in our communities.</li>
