--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container">
             <div class="images">
-                <img class="navbar-brand" src="images/Estancia.png" alt="Estancia">
+                <img class="navbar-brand1" src="images/Estancia.png" alt="Estancia">
                 <img class="navbar-brand" src="images/mor.png" alt="Mor">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -60,29 +60,31 @@
             </div>
         </div>
     </header>
-
+    <br>
   <!-- --------Window Cards-----------   -->
   <div id="demog"  class="my-card">
-    <div class="row w-100 mt-lg-4 my-2 mx-1">
-            <div class="col-md-3">
+    <div class="row w-100 mt-lg-2 my-2 mx-1">
+             <h1 class="text-sm-center" id="demo">Basic Demographic Data</h1>
+
+            <div class="col-md-2">
                 <div class="card border-info mx-sm-1 p-6 mb-1 mt-2">
                     <div class="card border-info shadow text-info p-3 my-card" ><span class="fa fa-children" aria-hidden="true"></span><span><h4 class="text-center" >Total Births</h4></span></div>
                     <div class="text-info text-center mt-2"><h1>401</h1></div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="card border-success mx-sm-1 p-6 mb-1 mt-2">
                     <div class="card border-success shadow text-success p-3 my-card"><span class="fa fa-bomb" aria-hidden="true"></span><span><h4 class="text-center" >Total Deaths</h4></span></div>
                     <div class="text-success text-center mt-2"><h1>58</h1></div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="card border-danger mx-sm-1 p-6 mb-1 mt-2">
                     <div class="card border-danger shadow text-danger p-3 my-card" ><span class="fa fa-industry" aria-hidden="true"></span><span><h4 class="text-center" >In-migration</h4></span></div>
                     <div class="text-danger text-center mt-2"><h1>140</h1></div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="card border-warning mx-sm-1 p-6 mb-1 mt-2">
                     <div class="card border-warning shadow text-warning p-3 my-card" ><span class="fa fa-inbox" aria-hidden="true"></span><span><h4 class="text-center" >Out-migration</h4></span></div>
                     <div class="text-warning text-center mt-2"><h1>40</h1></div>
