--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             calendar.schedulingButton.load({
               url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ04SldoEllZw7g6zi7YbrxmvwJzeD4Uv_dWmhBBz1nxSsN4da4wpyspWQdaeo7AuvNVO5Qh68HZ?gv=true',
               color: '#039BE5',
-              label: 'Book an appointment',
+              label: 'Book an appointment on Pre-Marriage Orientaion',
               target,
             });
           });
@@ -349,7 +349,7 @@
     </div>
     
     <!-- Contact & Map -->
-   <div  id="contact"  class="new-container mt-lg-4">
+   <div  id="contact"  class="new-container text-center mb-4">
         <section class="p-5">
             <div  class="container">
                 <div class="row g-4">
