--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a href="#PMOC" class="nav-link">Book Schedule PMOC</a>
                     </li>
                      <li class="nav-item">
-                        <a href="PDF-Download/index.html" class="nav-link">Files</a>
+                        <a href="PDF-Dowload/index.html" class="nav-link">Files</a>
                     </li>
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
