--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
             </tr>
             <tr>
               <th scope="row">Total Household Population</th>
-              <td>56,866</td>
+              <td>57,162</td>
             </tr>
             <tr>
                 <th scope="row">Male</th>
-                <td>28,635</td>
+                <td>28,807</td>
               </tr>
               <tr>
                 <th scope="row">Female</th>
-                <td>28,231</td>
+                <td>28,355</td>
               </tr>
               <tr>
                 <th scope="row">Sex Ratio</th>
-                <td>101:100</td>
+                <td>102:100</td>
               </tr>
               <tr>
                 <th scope="row">Median Age</th>
@@ -143,38 +143,38 @@
               </tr>
               <tr>
                 <th scope="row">Doubling Time | Year</th>
-                <td>83 years | yr 2106
+                <td>133 years | yr 2157
                 </td>
               </tr>
               <tr>
                 <th scope="row">Population Growth Rate</th>
-                <td>0.83</td>
+                <td>0.52</td>
               </tr>
               <tr>
                 <th scope="row">No. of Households</th>
-                <td>15,89
+                <td>16,632
                 </td>
               </tr>
               <tr>
                 <th scope="row">Population Density</th>
-                <td>1,950 persons/sq.km.
+                <td>1,960 persons/sq.km.
                 </td>
               </tr>
               <tr>
                 <th scope="row">Age Dependency Ratio</th>
-                <td>42
+                <td>40
                 </td>
               </tr><tr>
                 <th scope="row">Child Dependency Ratio</th>
-                <td>32
+                <td>30
                 </td>
               </tr><tr>
                 <th scope="row">Old Dependency Ratio</th>
                 <td>10
                 </td>
               </tr><tr>
-                <th scope="row">Doubling Time | Year</th>
-                <td>83 years | yr 2106
+                <th scope="row">Total Fertility Rate</th>
+                <td>0.77
                 </td>
               </tr>
       </table>
