--- a/index.html
+++ b/index.html
@@ -374,14 +374,14 @@
                                 <span class="mx-lg-3 h5"> Poblacion Zone 1, Estancia, Iloilo</span>
                             </li>
                             <li class="list-group-item">
-                                <span class="fw-bold">PPO 1:</span class="mx-lg-3 h5"> Berandine Y. Adaniel
+                                <span class="fw-bold">PPO 1:</span class="mx-lg-3 h5"> Bernadine Y. Adaniel
                             </li>
                             <li class="list-group-item">
-                                <span class="fw-bold">Contact Number:</span> (+63) 946-039-6568 TNT
+                                <span class="fw-bold">Contact Number:</span> (+63) 963-160-0964 TNT
                             </li>
                             <li class="list-group-item">
                                 <span class="fw-bold">Email Address:</span>
-                                <a class="mx-lg-4" href="mailto:adanielb28@gmail.com">adanielb28@gmail.com</a>
+                                <a class="mx-lg-4" href="mailto:adanielb28@gmail.com">ppoestancia@gmail.com</a>
                             </li>
                         </ul>
                     </div>
@@ -410,3 +410,4 @@
 
 </body>
 </html>
+
